# api/v1/common/controller.go
@@ -1,4 +1,4 @@
-package history
+package common
 
 import (
 	"go-api/core/response"
@@ -29,11 +29,39 @@ func GetHistoryList(c *gin.Context) {
 	}
 	claims := c.MustGet("claims").(*service.CustomClaims)
 	filter.OrganizationID = claims.OrganizationID
-	historyService := NewHistoryService()
-	count, list, err := historyService.GetHistoryList(filter)
+	commonService := NewCommonService()
+	count, list, err := commonService.GetHistoryList(filter)
 	if err != nil {
 		response.ResponseError(c, "DatabaseError", err)
 		return
 	}
 	response.ResponseList(c, filter.PageID, filter.PageSize, count, list)
+}
+
+// @Summary 获取下一个编码
+// @Id 702
+// @Tags 通用
+// @version 1.0
+// @Accept application/json
+// @Produce application/json
+// @Param number_type query string true "编码类型"
+// @Success 200 object response.SuccessRes{data=string} 成功
+// @Failure 400 object response.ErrorRes 内部错误
+// @Router /nextnumber [GET]
+func GetNextNumber(c *gin.Context) {
+	var filter NumberFilter
+	err := c.ShouldBindQuery(&filter)
+	if err != nil {
+		response.ResponseError(c, "BindingError", err)
+		return
+	}
+	claims := c.MustGet("claims").(*service.CustomClaims)
+	filter.OrganizationID = claims.OrganizationID
+	commonService := NewCommonService()
+	res, err := commonService.GetNextNumber(filter)
+	if err != nil {
+		response.ResponseError(c, "DatabaseError", err)
+		return
+	}
+	response.Response(c, res)
 }
