# api/v1/common/router.go
@@ -1,8 +1,8 @@
-package history
+package common
 
 import "github.com/gin-gonic/gin"
 
 func AuthRouter(g *gin.RouterGroup) {
 	g.GET("/historys", GetHistoryList)
-
+	g.GET("/nextnumber", GetNextNumber)
 }
