# api/v1/item/router.go
@@ -10,7 +10,8 @@ func AuthRouter(g *gin.RouterGroup) {
 	g.DELETE("/items/:id", DeleteItem)
 
 	g.GET("/barcodes", GetBarcodeList)
-	g.GET("/barcodes/:id", GetBarcodeByID)
+	// g.GET("/barcodes/:id", GetBarcodeByID)
+	g.GET("/barcodes/:code", GetBarcodeByCode)
 	g.PUT("/barcodes/:id", UpdateBarcode)
 	g.POST("/barcodes", NewBarcode)
 	g.DELETE("/barcodes/:id", DeleteBarcode)
